@@ -39,6 +39,28 @@ module ActiveMerchant #:nodoc:
         commit('sale', post, '/transactions_sync')
       end
 
+      def authorize(money, payment, options = {})
+        post = {
+          public_key: public_key,
+          type: 'CARD',
+          financial_operation: 'PREAUTHORIZATION'
+        }
+        add_auth_params(post, money, payment, options)
+
+        commit('authorize', post, '/payment_sources_sync')
+      end
+
+      def capture(money, authorization, options = {})
+        post = {
+          reference: options[:reference] || generate_reference,
+          public_key: public_key,
+          payment_source_id: authorization
+        }
+        add_invoice(post, money, options)
+
+        commit('capture', post, '/transactions_sync')
+      end
+
       def refund(money, authorization, options = {})
         post = { amount_in_cents: amount(money).to_i, transaction_id: authorization.to_s }
         commit('refund', post, '/refunds_sync')
@@ -85,19 +107,32 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_card(post, card, options)
+        payment_method = {
+          type: 'CARD'
+        }
+        add_basic_card_info(payment_method, card, options)
+        post[:payment_method] = payment_method
+      end
+
+      def add_auth_params(post, money, card, options)
+        data = {
+          amount_in_cents: amount(money).to_i,
+          currency: (options[:currency] || currency(money))
+        }
+        add_basic_card_info(data, card, options)
+        post[:data] = data
+      end
+
+      def add_basic_card_info(post, card, options)
         installments = options[:installments] ? options[:installments].to_i : 1
         cvc = card.verification_value || nil
 
-        payment_method = {
-          type: 'CARD',
-          number: card.number,
-          exp_month: card.month.to_s.rjust(2, '0'),
-          exp_year: card.year.to_s[2..3],
-          installments: installments,
-          card_holder: card.name
-        }
-        payment_method[:cvc] = cvc if cvc && !cvc.empty?
-        post[:payment_method] = payment_method
+        post[:number] = card.number
+        post[:exp_month] = card.month.to_s.rjust(2, '0')
+        post[:exp_year] = card.year.to_s[2..3]
+        post[:installments] = installments
+        post[:card_holder] = card.name
+        post[:cvc] = cvc if cvc && !cvc.empty?
       end
 
       def parse(body)
@@ -107,7 +142,6 @@ module ActiveMerchant #:nodoc:
       def commit(action, parameters, endpoint)
         url = (test? ? test_url : live_url) + endpoint
         response = parse(ssl_post(url, post_data(action, parameters), headers))
-
         Response.new(
           success_from(response),
           message_from(response),
@@ -130,7 +164,11 @@ module ActiveMerchant #:nodoc:
       end
 
       def success_from(response)
-        response.dig('data', 'status') == 'APPROVED'
+        success_statuses.include? response.dig('data', 'status')
+      end
+
+      def success_statuses
+        %w(APPROVED AVAILABLE)
       end
 
       def message_from(response)
